fix spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -712,7 +712,7 @@
   }
 
   .services-container {
-    padding: 50px 5%;
+    padding: 100px 5%;
 
     .texts {
       .sub {
@@ -1009,7 +1009,7 @@
 @media screen and (max-width: 380px) {
 
   .services-container {
-    padding: 25px 5%;
+    padding: 100px 5%;
   }
 
   .about-container {
